# banking/views/delete_account/api_wrapper.py
@@ -1,13 +1,10 @@
-import json
-
 from django_swagger_utils.drf_server.utils.decorator.interface_decorator \
     import validate_decorator
 from .validator_class import ValidatorClass
 
 from banking.storages.storage_implementation import StorageImplementation
 from banking.presenters.presenter_implementation import PresenterImplementation
-from banking.interactors.get_account_balance_interactor import GetAccountBalanceInteractor
-
+from banking.interactors.delete_account import DeleteAccount
 
 @validate_decorator(validator_class=ValidatorClass)
 def api_wrapper(*args, **kwargs):
@@ -16,5 +13,6 @@ def api_wrapper(*args, **kwargs):
     account_id = path_params['account_id']
     storage = StorageImplementation()
     presenter = PresenterImplementation()
-    interactor = GetAccountBalanceInteractor(storage=storage)
-    return interactor.get_accountant_balance_wrapper(account_id=account_id, presenter=presenter)
+    interactor = DeleteAccount(storage=storage)
+    return interactor.delete_account_wrapper(account_id=account_id, presenter=presenter)
+
